slap/interface/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> commandlist
Rule 2     symbol -> SIMPLE_SYMBOL
Rule 3     symbol -> QUOTED_SYMBOL
Rule 4     keyword -> COLON SIMPLE_SYMBOL
Rule 5     attribute_value -> constant
Rule 6     attribute_value -> symbol
Rule 7     attribute_value -> SAT
Rule 8     attribute_value -> UNSAT
Rule 9     attribute -> keyword
Rule 10    attribute -> keyword attribute_value
Rule 11    attributes -> <empty>
Rule 12    attributes -> attributes attribute
Rule 13    option -> keyword attribute_value
Rule 14    info_flag -> keyword
Rule 15    index -> NUMBER
Rule 16    index -> symbol
Rule 17    indexlist -> <empty>
Rule 18    indexlist -> indexlist index
Rule 19    identifier -> symbol
Rule 20    identifier -> LPAR UNDERSCORE symbol indexlist RPAR
Rule 21    constant -> NUMBER
Rule 22    constant -> BOOL
Rule 23    constant -> STRING_LITERAL
Rule 24    symbollist -> <empty>
Rule 25    symbollist -> symbollist symbol
Rule 26    sort -> identifier
Rule 27    sort -> LPAR identifier sortlist RPAR
Rule 28    sortlist -> <empty>
Rule 29    sortlist -> sortlist sort
Rule 30    qual_identifier -> identifier
Rule 31    qual_identifier -> LPAR AS identifier sort RPAR
Rule 32    var_binding -> LPAR symbol term RPAR
Rule 33    var_binding_list -> var_binding
Rule 34    var_binding_list -> var_binding_list var_binding
Rule 35    sorted_var -> LPAR symbol sort RPAR
Rule 36    sorted_var_list -> <empty>
Rule 37    sorted_var_list -> sorted_var
Rule 38    sorted_var_list -> sorted_var_list sorted_var
Rule 39    pattern -> symbol
Rule 40    pattern -> LPAR symbol symbollist RPAR
Rule 41    match_case -> LPAR pattern term RPAR
Rule 42    match_case_list -> match_case
Rule 43    match_case_list -> match_case_list match_case
Rule 44    term -> constant
Rule 45    term -> qual_identifier
Rule 46    term -> LPAR qual_identifier term_list RPAR
Rule 47    term -> LPAR LET LPAR var_binding_list RPAR term RPAR
Rule 48    term -> LPAR FORALL LPAR sorted_var_list RPAR term RPAR
Rule 49    term -> LPAR EXISTS LPAR sorted_var_list RPAR term RPAR
Rule 50    term -> LPAR MATCH term LPAR match_case_list RPAR RPAR
Rule 51    term -> LPAR EXCLMARK term attributes RPAR
Rule 52    term_list -> <empty>
Rule 53    term_list -> term_list term
Rule 54    selector_dec -> LPAR symbol sort RPAR
Rule 55    selector_dec_list -> <empty>
Rule 56    selector_dec_list -> selector_dec_list selector_dec
Rule 57    constructor_dec -> LPAR symbol selector_dec_list RPAR
Rule 58    constructor_dec_list -> <empty>
Rule 59    constructor_dec_list -> constructor_dec_list constructor_dec
Rule 60    datatype_dec -> LPAR constructor_dec_list RPAR
Rule 61    datatype_dec -> LPAR PAR LPAR symbollist RPAR LPAR constructor_dec_list RPAR RPAR
Rule 62    datatype_dec_list -> <empty>
Rule 63    datatype_dec_list -> datatype_dec_list datatype_dec
Rule 64    function_def -> symbol LPAR sorted_var_list RPAR sort term
Rule 65    function_def_list -> <empty>
Rule 66    function_def_list -> function_def_list function_def
Rule 67    prop_literal -> symbol
Rule 68    prop_literal -> LPAR symbol symbol RPAR
Rule 69    prop_literal_list -> <empty>
Rule 70    prop_literal_list -> prop_literal_list prop_literal
Rule 71    command -> LPAR ASSERT term RPAR
Rule 72    command -> LPAR CHKSAT RPAR
Rule 73    command -> LPAR CHKSATASSUMING prop_literal_list RPAR
Rule 74    command -> LPAR DECLCONST symbol sort RPAR
Rule 75    command -> LPAR DECLDATATYPE symbol datatype_dec RPAR
Rule 76    command -> LPAR DECLDATATYPES LPAR symbollist RPAR LPAR datatype_dec_list RPAR RPAR
Rule 77    command -> LPAR DECLFUN symbol LPAR sortlist RPAR sort RPAR
Rule 78    command -> LPAR DECLSORT symbol NUMBER RPAR
Rule 79    command -> LPAR DEFFUN function_def RPAR
Rule 80    command -> LPAR DEFFUNREC function_def RPAR
Rule 81    command -> LPAR DEFFUNSREC LPAR function_def_list RPAR LPAR term_list RPAR RPAR
Rule 82    command -> LPAR DEFSORT symbol LPAR symbollist RPAR sort RPAR
Rule 83    command -> LPAR ECHO STRING RPAR
Rule 84    command -> LPAR EXIT RPAR
Rule 85    command -> LPAR GETASSERTIONS RPAR
Rule 86    command -> LPAR GETASSIGNMENT RPAR
Rule 87    command -> LPAR GETINF info_flag RPAR
Rule 88    command -> LPAR GETMOD RPAR
Rule 89    command -> LPAR GETOPT RPAR
Rule 90    command -> LPAR GETPRF RPAR
Rule 91    command -> LPAR GETUNSATASSUMPTS RPAR
Rule 92    command -> LPAR GETUNSATCORE RPAR
Rule 93    command -> LPAR GETVAL LPAR term_list RPAR RPAR
Rule 94    command -> LPAR POP NUMBER RPAR
Rule 95    command -> LPAR PUSH NUMBER RPAR
Rule 96    command -> LPAR RESET RPAR
Rule 97    command -> LPAR RESETASSERTIONS
Rule 98    command -> LPAR SETINFO attribute RPAR
Rule 99    command -> LPAR SETLOGIC symbol RPAR
Rule 100   command -> LPAR SETOPT option RPAR
Rule 101   command -> LPAR MODEL commandlist RPAR
Rule 102   command -> LPAR ERROR STRING_LITERAL RPAR
Rule 103   command -> SAT
Rule 104   command -> UNSAT
Rule 105   commandlist -> <empty>
Rule 106   commandlist -> commandlist command

Terminals, with rules where they appear

AS                   : 31
ASSERT               : 71
BOOL                 : 22
CHKSAT               : 72
CHKSATASSUMING       : 73
COLON                : 4
COMMENT              : 
DECLCONST            : 74
DECLDATATYPE         : 75
DECLDATATYPES        : 76
DECLFUN              : 77
DECLSORT             : 78
DEFFUN               : 79
DEFFUNREC            : 80
DEFFUNSREC           : 81
DEFSORT              : 82
ECHO                 : 83
ERROR                : 102
EXCLMARK             : 51
EXISTS               : 49
EXIT                 : 84
FORALL               : 48
GETASSERTIONS        : 85
GETASSIGNMENT        : 86
GETINF               : 87
GETMOD               : 88
GETOPT               : 89
GETPRF               : 90
GETUNSATASSUMPTS     : 91
GETUNSATCORE         : 92
GETVAL               : 93
LET                  : 47
LPAR                 : 20 27 31 32 35 40 41 46 47 47 48 48 49 49 50 50 51 54 57 60 61 61 61 64 68 71 72 73 74 75 76 76 76 77 77 78 79 80 81 81 81 82 82 83 84 85 86 87 88 89 90 91 92 93 93 94 95 96 97 98 99 100 101 102
MATCH                : 50
MODEL                : 101
NUMBER               : 15 21 78 94 95
PAR                  : 61
POP                  : 94
PUSH                 : 95
QUOTED_SYMBOL        : 3
RESET                : 96
RESETASSERTIONS      : 97
RPAR                 : 20 27 31 32 35 40 41 46 47 47 48 48 49 49 50 50 51 54 57 60 61 61 61 64 68 71 72 73 74 75 76 76 76 77 77 78 79 80 81 81 81 82 82 83 84 85 86 87 88 89 90 91 92 93 93 94 95 96 98 99 100 101 102
SAT                  : 7 103
SETINFO              : 98
SETLOGIC             : 99
SETOPT               : 100
SIMPLE_SYMBOL        : 2 4
STRING               : 83
STRING_LITERAL       : 23 102
UNDERSCORE           : 20
UNSAT                : 8 104
error                : 

Nonterminals, with rules where they appear

attribute            : 12 98
attribute_value      : 10 13
attributes           : 12 51
command              : 106
commandlist          : 1 101 106
constant             : 5 44
constructor_dec      : 59
constructor_dec_list : 59 60 61
datatype_dec         : 63 75
datatype_dec_list    : 63 76
function_def         : 66 79 80
function_def_list    : 66 81
identifier           : 26 27 30 31
index                : 18
indexlist            : 18 20
info_flag            : 87
keyword              : 9 10 13 14
match_case           : 42 43
match_case_list      : 43 50
option               : 100
pattern              : 41
program              : 0
prop_literal         : 70
prop_literal_list    : 70 73
qual_identifier      : 45 46
selector_dec         : 56
selector_dec_list    : 56 57
sort                 : 29 31 35 54 64 74 77 82
sorted_var           : 37 38
sorted_var_list      : 38 48 49 64
sortlist             : 27 29 77
symbol               : 6 16 19 20 25 32 35 39 40 54 57 64 67 68 68 74 75 77 78 82 99
symbollist           : 25 40 61 76 82
term                 : 32 41 47 48 49 50 51 53 64 71
term_list            : 46 53 81 93
var_binding          : 33 34
var_binding_list     : 34 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . commandlist
    (105) commandlist -> .
    (106) commandlist -> . commandlist command

    LPAR            reduce using rule 105 (commandlist -> .)
    SAT             reduce using rule 105 (commandlist -> .)
    UNSAT           reduce using rule 105 (commandlist -> .)
    $end            reduce using rule 105 (commandlist -> .)

    commandlist                    shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> commandlist .
    (106) commandlist -> commandlist . command
    (71) command -> . LPAR ASSERT term RPAR
    (72) command -> . LPAR CHKSAT RPAR
    (73) command -> . LPAR CHKSATASSUMING prop_literal_list RPAR
    (74) command -> . LPAR DECLCONST symbol sort RPAR
    (75) command -> . LPAR DECLDATATYPE symbol datatype_dec RPAR
    (76) command -> . LPAR DECLDATATYPES LPAR symbollist RPAR LPAR datatype_dec_list RPAR RPAR
    (77) command -> . LPAR DECLFUN symbol LPAR sortlist RPAR sort RPAR
    (78) command -> . LPAR DECLSORT symbol NUMBER RPAR
    (79) command -> . LPAR DEFFUN function_def RPAR
    (80) command -> . LPAR DEFFUNREC function_def RPAR
    (81) command -> . LPAR DEFFUNSREC LPAR function_def_list RPAR LPAR term_list RPAR RPAR
    (82) command -> . LPAR DEFSORT symbol LPAR symbollist RPAR sort RPAR
    (83) command -> . LPAR ECHO STRING RPAR
    (84) command -> . LPAR EXIT RPAR
    (85) command -> . LPAR GETASSERTIONS RPAR
    (86) command -> . LPAR GETASSIGNMENT RPAR
    (87) command -> . LPAR GETINF info_flag RPAR
    (88) command -> . LPAR GETMOD RPAR
    (89) command -> . LPAR GETOPT RPAR
    (90) command -> . LPAR GETPRF RPAR
    (91) command -> . LPAR GETUNSATASSUMPTS RPAR
    (92) command -> . LPAR GETUNSATCORE RPAR
    (93) command -> . LPAR GETVAL LPAR term_list RPAR RPAR
    (94) command -> . LPAR POP NUMBER RPAR
    (95) command -> . LPAR PUSH NUMBER RPAR
    (96) command -> . LPAR RESET RPAR
    (97) command -> . LPAR RESETASSERTIONS
    (98) command -> . LPAR SETINFO attribute RPAR
    (99) command -> . LPAR SETLOGIC symbol RPAR
    (100) command -> . LPAR SETOPT option RPAR
    (101) command -> . LPAR MODEL commandlist RPAR
    (102) command -> . LPAR ERROR STRING_LITERAL RPAR
    (103) command -> . SAT
    (104) command -> . UNSAT

    $end            reduce using rule 1 (program -> commandlist .)
    LPAR            shift and go to state 5
    SAT             shift and go to state 4
    UNSAT           shift and go to state 3

    command                        shift and go to state 6

state 2

    (0) S' -> program .



state 3

    (104) command -> UNSAT .

    RPAR            reduce using rule 104 (command -> UNSAT .)
    LPAR            reduce using rule 104 (command -> UNSAT .)
    SAT             reduce using rule 104 (command -> UNSAT .)
    UNSAT           reduce using rule 104 (command -> UNSAT .)
    $end            reduce using rule 104 (command -> UNSAT .)


state 4

    (103) command -> SAT .

    RPAR            reduce using rule 103 (command -> SAT .)
    LPAR            reduce using rule 103 (command -> SAT .)
    SAT             reduce using rule 103 (command -> SAT .)
    UNSAT           reduce using rule 103 (command -> SAT .)
    $end            reduce using rule 103 (command -> SAT .)


state 5

    (71) command -> LPAR . ASSERT term RPAR
    (72) command -> LPAR . CHKSAT RPAR
    (73) command -> LPAR . CHKSATASSUMING prop_literal_list RPAR
    (74) command -> LPAR . DECLCONST symbol sort RPAR
    (75) command -> LPAR . DECLDATATYPE symbol datatype_dec RPAR
    (76) command -> LPAR . DECLDATATYPES LPAR symbollist RPAR LPAR datatype_dec_list RPAR RPAR
    (77) command -> LPAR . DECLFUN symbol LPAR sortlist RPAR sort RPAR
    (78) command -> LPAR . DECLSORT symbol NUMBER RPAR
    (79) command -> LPAR . DEFFUN function_def RPAR
    (80) command -> LPAR . DEFFUNREC function_def RPAR
    (81) command -> LPAR . DEFFUNSREC LPAR function_def_list RPAR LPAR term_list RPAR RPAR
    (82) command -> LPAR . DEFSORT symbol LPAR symbollist RPAR sort RPAR
    (83) command -> LPAR . ECHO STRING RPAR
    (84) command -> LPAR . EXIT RPAR
    (85) command -> LPAR . GETASSERTIONS RPAR
    (86) command -> LPAR . GETASSIGNMENT RPAR
    (87) command -> LPAR . GETINF info_flag RPAR
    (88) command -> LPAR . GETMOD RPAR
    (89) command -> LPAR . GETOPT RPAR
    (90) command -> LPAR . GETPRF RPAR
    (91) command -> LPAR . GETUNSATASSUMPTS RPAR
    (92) command -> LPAR . GETUNSATCORE RPAR
    (93) command -> LPAR . GETVAL LPAR term_list RPAR RPAR
    (94) command -> LPAR . POP NUMBER RPAR
    (95) command -> LPAR . PUSH NUMBER RPAR
    (96) command -> LPAR . RESET RPAR
    (97) command -> LPAR . RESETASSERTIONS
    (98) command -> LPAR . SETINFO attribute RPAR
    (99) command -> LPAR . SETLOGIC symbol RPAR
    (100) command -> LPAR . SETOPT option RPAR
    (101) command -> LPAR . MODEL commandlist RPAR
    (102) command -> LPAR . ERROR STRING_LITERAL RPAR

    ASSERT          shift and go to state 36
    CHKSAT          shift and go to state 22
    CHKSATASSUMING  shift and go to state 34
    DECLCONST       shift and go to state 27
    DECLDATATYPE    shift and go to state 32
    DECLDATATYPES   shift and go to state 14
    DECLFUN         shift and go to state 16
    DECLSORT        shift and go to state 35
    DEFFUN          shift and go to state 31
    DEFFUNREC       shift and go to state 33
    DEFFUNSREC      shift and go to state 28
    DEFSORT         shift and go to state 11
    ECHO            shift and go to state 19
    EXIT            shift and go to state 12
    GETASSERTIONS   shift and go to state 8
    GETASSIGNMENT   shift and go to state 25
    GETINF          shift and go to state 17
    GETMOD          shift and go to state 13
    GETOPT          shift and go to state 37
    GETPRF          shift and go to state 30
    GETUNSATASSUMPTS shift and go to state 29
    GETUNSATCORE    shift and go to state 9
    GETVAL          shift and go to state 26
    POP             shift and go to state 24
    PUSH            shift and go to state 21
    RESET           shift and go to state 15
    RESETASSERTIONS shift and go to state 20
    SETINFO         shift and go to state 23
    SETLOGIC        shift and go to state 38
    SETOPT          shift and go to state 18
    MODEL           shift and go to state 7
    ERROR           shift and go to state 10


state 6

    (106) commandlist -> commandlist command .

    LPAR            reduce using rule 106 (commandlist -> commandlist command .)
    SAT             reduce using rule 106 (commandlist -> commandlist command .)
    UNSAT           reduce using rule 106 (commandlist -> commandlist command .)
    $end            reduce using rule 106 (commandlist -> commandlist command .)
    RPAR            reduce using rule 106 (commandlist -> commandlist command .)


state 7

    (101) command -> LPAR MODEL . commandlist RPAR
    (105) commandlist -> .
    (106) commandlist -> . commandlist command

    RPAR            reduce using rule 105 (commandlist -> .)
    LPAR            reduce using rule 105 (commandlist -> .)
    SAT             reduce using rule 105 (commandlist -> .)
    UNSAT           reduce using rule 105 (commandlist -> .)

    commandlist                    shift and go to state 39

state 8

    (85) command -> LPAR GETASSERTIONS . RPAR

    RPAR            shift and go to state 40


state 9

    (92) command -> LPAR GETUNSATCORE . RPAR

    RPAR            shift and go to state 41


state 10

    (102) command -> LPAR ERROR . STRING_LITERAL RPAR

    STRING_LITERAL  shift and go to state 42


state 11

    (82) command -> LPAR DEFSORT . symbol LPAR symbollist RPAR sort RPAR
    (2) symbol -> . SIMPLE_SYMBOL
    (3) symbol -> . QUOTED_SYMBOL

    SIMPLE_SYMBOL   shift and go to state 43
    QUOTED_SYMBOL   shift and go to state 44

    symbol                         shift and go to state 45

state 12

    (84) command -> LPAR EXIT . RPAR

    RPAR            shift and go to state 46


state 13

    (88) command -> LPAR GETMOD . RPAR

    RPAR            shift and go to state 47


state 14

    (76) command -> LPAR DECLDATATYPES . LPAR symbollist RPAR LPAR datatype_dec_list RPAR RPAR

    LPAR            shift and go to state 48


state 15

    (96) command -> LPAR RESET . RPAR

    RPAR            shift and go to state 49


state 16

    (77) command -> LPAR DECLFUN . symbol LPAR sortlist RPAR sort RPAR
    (2) symbol -> . SIMPLE_SYMBOL
    (3) symbol -> . QUOTED_SYMBOL

    SIMPLE_SYMBOL   shift and go to state 43
    QUOTED_SYMBOL   shift and go to state 44

    symbol                         shift and go to state 50

state 17

    (87) command -> LPAR GETINF . info_flag RPAR
    (14) info_flag -> . keyword
    (4) keyword -> . COLON SIMPLE_SYMBOL

    COLON           shift and go to state 53

    info_flag                      shift and go to state 52
    keyword                        shift and go to state 51

state 18

    (100) command -> LPAR SETOPT . option RPAR
    (13) option -> . keyword attribute_value
    (4) keyword -> . COLON SIMPLE_SYMBOL

    COLON           shift and go to state 53

    keyword                        shift and go to state 54
    option                         shift and go to state 55

state 19

    (83) command -> LPAR ECHO . STRING RPAR

    STRING          shift and go to state 56


state 20

    (97) command -> LPAR RESETASSERTIONS .

    RPAR            reduce using rule 97 (command -> LPAR RESETASSERTIONS .)
    LPAR            reduce using rule 97 (command -> LPAR RESETASSERTIONS .)
    SAT             reduce using rule 97 (command -> LPAR RESETASSERTIONS .)
    UNSAT           reduce using rule 97 (command -> LPAR RESETASSERTIONS .)
    $end            reduce using rule 97 (command -> LPAR RESETASSERTIONS .)


state 21

    (95) command -> LPAR PUSH . NUMBER RPAR

    NUMBER          shift and go to state 57


state 22

    (72) command -> LPAR CHKSAT . RPAR

    RPAR            shift and go to state 58


state 23

    (98) command -> LPAR SETINFO . attribute RPAR
    (9) attribute -> . keyword
    (10) attribute -> . keyword attribute_value
    (4) keyword -> . COLON SIMPLE_SYMBOL

    COLON           shift and go to state 53

    attribute                      shift and go to state 59
    keyword                        shift and go to state 60

state 24

    (94) command -> LPAR POP . NUMBER RPAR

    NUMBER          shift and go to state 61


state 25

    (86) command -> LPAR GETASSIGNMENT . RPAR

    RPAR            shift and go to state 62


state 26

    (93) command -> LPAR GETVAL . LPAR term_list RPAR RPAR

    LPAR            shift and go to state 63


state 27

    (74) command -> LPAR DECLCONST . symbol sort RPAR
    (2) symbol -> . SIMPLE_SYMBOL
    (3) symbol -> . QUOTED_SYMBOL

    SIMPLE_SYMBOL   shift and go to state 43
    QUOTED_SYMBOL   shift and go to state 44

    symbol                         shift and go to state 64

state 28

    (81) command -> LPAR DEFFUNSREC . LPAR function_def_list RPAR LPAR term_list RPAR RPAR

    LPAR            shift and go to state 65


state 29
